--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,4 @@
-<div id="viewfooter">
-    <img src="/images/ibis/map.png">&nbsp;Happy footers
+<div id="viewfooter" style="margin-top: 10px" >
+    <a style="float: left;"    href="http://www.topicquests.org/"><img src="/images/TopicQuestsLogo_sm.png"></a>
+    <a style="float: right;" href="https://github.com/KnowledgeGarden/column-conversations"><img src="/images/github.jpg"></a></td>
 </div>
