--- a/public/css/colcon.css
+++ b/public/css/colcon.css
@@ -1,7 +1,3 @@
-/** {
-	margin: 0;
-	padding: 0;
-}*/
 
 .mcontainer {
     display: inline-block;
@@ -36,16 +32,29 @@
     font-family:pragmatica-web,sans-serif;
 }
 
+/**
+ * Enable columns to scroll right and left
+ */
+.columnscroller {
+    border: 1px solid black;
+    width: 960;
+    white-space:nowrap;
+    overflow-x: scroll; 
+    overflow-y: hidden;
+    margin: 12px;
+    height: 400px; 
+}
+
+/**
+ * width is set to accomodate lots of columns.
+ * If they wrap when adding more columns, then
+ * width must increase
+ */
 .columncontainer {
-    /*clear: both;*/
-	width: 960px;
-    margin: 12px;    
+	width: 1700px;
 }
 .datacontainer {
-    /*clear: both;*/
-	width: 960px;
-    margin: 12px;
-    height: 400px;    
+	width: 1700px;
 }
 
 .headerimage {
@@ -69,6 +78,7 @@
 
  
 #viewfooter {
+    clear: both;
     margin-top: 10px;
 	width: 958px;
     border: 1px solid black;
