--- a/views/view.hbs
+++ b/views/view.hbs
@@ -5,54 +5,79 @@
         {{{result.details}}}
     </p>
 </div>
-<!-- column headers -->
-<div class="columncontainer">
-        <div class="column" style="text-align: center;">
-            <img class="headerimage" src="/images/ibis/issue_sm.png">Question
-            <a href="/conversation/newquestion/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
-        </div>
-        <div class="column" style="text-align: center;">
-            <img class="headerimage" src="/images/ibis/position_sm.png">Answer
-            <img class="respond" src="/images/respond_sm.png">
-        </div>
-        <div class="column" style="text-align: center;">
-            <img class="headerimage" src="/images/ibis/plus_sm.png">Pro
-            <img class="respond" src="/images/respond_sm.png">
-        </div>
-        <div class="column" style="text-align: center;">
-            <img class="headerimage" src="/images/ibis/minus_sm.png">Con
-            <img class="respond" src="/images/respond_sm.png">
-        </div>
-</div>
-<!-- column data -->
-<div class="datacontainer">
-    <div class="datacolumn">
-        {{#each result.questions}}
-            <div class="node">
-                <a style="margin-left:4px;" href="/conversation/{{id}}">{{statement}}</a>
+<!-- left-right scrollable container -->
+<div class="columnscroller">
+    <!-- column headers -->
+    <div class="columncontainer">
+            <div class="column" style="text-align: center;">
+                <img class="headerimage" src="/images/ibis/issue_sm.png">Question
+                <a href="/conversation/newquestion/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
             </div>
-        {{/each}}
+            <div class="column" style="text-align: center;">
+                <img class="headerimage" src="/images/ibis/position_sm.png">Answer
+                <img class="respond" src="/images/respond_sm.png">
+            </div>
+            <div class="column" style="text-align: center;">
+                <img class="headerimage" src="/images/ibis/plus_sm.png">Pro
+                <img class="respond" src="/images/respond_sm.png">
+            </div>
+            <div class="column" style="text-align: center;">
+                <img class="headerimage" src="/images/ibis/minus_sm.png">Con
+                <img class="respond" src="/images/respond_sm.png">
+            </div>
+            <div class="column" style="text-align: center;">
+                <img class="headerimage" src="/images/ibis/note_sm.png">Notes
+                <img class="respond" src="/images/respond_sm.png">
+            </div>
+            <div class="column" style="text-align: center;">
+                <img class="headerimage" src="/images/ibis/reference_sm.png">References
+                <img class="respond" src="/images/respond_sm.png">
+            </div>
+            <div class="column" style="text-align: center;">
+                <img class="headerimage" src="/images/tag_sm.png">Tags
+                <img class="respond" src="/images/respond_sm.png">
+            </div>
     </div>
-    <div class="datacolumn">
-        {{#each result.answers}}
-            <div class="node">
-                <a style="margin-left:4px;" href="/conversation/{{id}}">{{statement}}</a>
-            </div>
-        {{/each}}
-    </div>
-    <div class="datacolumn">
-        {{#each result.pros}}
-            <div class="node">
-                <a style="margin-left:4px;" href="/conversation/{{id}}">{{statement}}</a>
-            </div>
-        {{/each}}
+    <!-- column data -->
+    <div class="datacontainer">
+        <div class="datacolumn">
+            {{#each result.questions}}
+                <div class="node">
+                    <a style="margin-left:4px;" href="/conversation/{{id}}">{{statement}}</a>
+                </div>
+            {{/each}}
+        </div>
+        <div class="datacolumn">
+            {{#each result.answers}}
+                <div class="node">
+                    <a style="margin-left:4px;" href="/conversation/{{id}}">{{statement}}</a>
+                </div>
+            {{/each}}
+        </div>
+        <div class="datacolumn">
+            {{#each result.pros}}
+                <div class="node">
+                    <a style="margin-left:4px;" href="/conversation/{{id}}">{{statement}}</a>
+                </div>
+            {{/each}}
 
-    </div>
-    <div class="datacolumn">
-        {{#each result.cons}}
-            <div class="node">
-                <a style="margin-left:4px;" href="/conversation/{{id}}">{{statement}}</a>
-            </div>
-        {{/each}}
+        </div>
+        <div class="datacolumn">
+            {{#each result.cons}}
+                <div class="node">
+                    <a style="margin-left:4px;" href="/conversation/{{id}}">{{statement}}</a>
+                </div>
+            {{/each}}
+        </div>
+        <div class="datacolumn">
+            <!-- TODO notes -->
+        </div>
+        <div class="datacolumn">
+            <!-- TODO references -->
+        </div>
+        <div class="datacolumn">
+            <!-- TODO tags -->
+        </div>
+
     </div>
 </div>
