--- a/views/view.hbs
+++ b/views/view.hbs
@@ -10,31 +10,31 @@
     <!-- column headers -->
     <div class="columncontainer">
             <div class="column" style="text-align: center;">
-                <img class="headerimage" src="/images/ibis/issue_sm.png">Question
+                <img class="headerimage" src="/images/ibis/issue.png">Question
                 <a href="/conversation/newquestion/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
             </div>
             <div class="column" style="text-align: center;">
-                <img class="headerimage" src="/images/ibis/position_sm.png">Answer
+                <img class="headerimage" src="/images/ibis/position.png">Answer
                 <img class="respond" src="/images/respond_sm.png">
             </div>
             <div class="column" style="text-align: center;">
-                <img class="headerimage" src="/images/ibis/plus_sm.png">Pro
+                <img class="headerimage" src="/images/ibis/plus.png">Pro
                 <img class="respond" src="/images/respond_sm.png">
             </div>
             <div class="column" style="text-align: center;">
-                <img class="headerimage" src="/images/ibis/minus_sm.png">Con
+                <img class="headerimage" src="/images/ibis/minus.png">Con
                 <img class="respond" src="/images/respond_sm.png">
             </div>
             <div class="column" style="text-align: center;">
-                <img class="headerimage" src="/images/ibis/note_sm.png">Notes
+                <img class="headerimage" src="/images/ibis/note.png">Notes
                 <img class="respond" src="/images/respond_sm.png">
             </div>
             <div class="column" style="text-align: center;">
-                <img class="headerimage" src="/images/ibis/reference_sm.png">References
+                <img class="headerimage" src="/images/ibis/reference.png">References
                 <img class="respond" src="/images/respond_sm.png">
             </div>
             <div class="column" style="text-align: center;">
-                <img class="headerimage" src="/images/tag_sm.png">Tags
+                <img class="headerimage" src="/images/tag.png">Tags
                 <img class="respond" src="/images/respond_sm.png">
             </div>
     </div>
