--- a/views/partials/sidenav.hbs
+++ b/views/partials/sidenav.hbs
@@ -1,9 +1,11 @@
 <div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a style="margin-left: 6px;" href="/conversation/newconversation"><b>New Conversation</b></a>
-  <h2><img src="/images/ibis/map.png">Conversations</h2>
+  <a href="javascript:void(0)" title="Close" class="closebtn" onclick="closeNav()">&times;</a>
+  <div style="margin-left: 10px;">
+  <a  href="/conversation/newconversation"><b>New Conversation</b></a>
+  <h2><img style="margin-right: 4px" src="/images/ibis/map.png">Conversations</h2>
   <!-- paint the conversations -->
   {{#each conlist}}
     <a href="/conversation/fetchconversation/{{id}}">{{statement}}</a><br/>
   {{/each}}
+  </div>
 </div>
