Adding IBIS nodes to conversation works

--- a/views/partials/label_details_form.hbs
+++ b/views/partials/label_details_form.hbs
@@ -1,8 +1,8 @@
 <div id="topbox">
-    <h2>{{formtitle}}</h2>
+    <h2 style="margin-left: 20px">{{formtitle}}</h2>
     <form method="post" action="{{action}}">
-        <input type="hidden" name="hidden-1" value="{{hidden-1}}">
-        <input type="hidden" name="hidden-2" value="{{hidden-2}}">
+        <input type="hidden" name="hidden_1" value="{{hidden_1}}">
+        <input type="hidden" name="hidden_2" value="{{hidden_2}}">
         <p style="margin-left: 20px">
             <b>Label</b><br/>
             <input type="text" size="100" name="title" placeholder="{{labelplaceholder}}" value="{{formlabel}}">
