--- a/public/css/colcon.css
+++ b/public/css/colcon.css
@@ -104,6 +104,7 @@
     border: 1px solid black;
     border-radius: 3px;
     min-height: 40px;
+    word-wrap: normal;
     font-family:pragmatica-web,sans-serif;
 }
 .node:hover {
