--- a/views/view.hbs
+++ b/views/view.hbs
@@ -15,27 +15,27 @@
             </div>
             <div class="column" style="text-align: center;">
                 <img class="headerimage" src="/images/ibis/position.png">Answer
-                <img class="respond" src="/images/respond_sm.png">
+                <a href="/conversation/newanswer/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
             </div>
             <div class="column" style="text-align: center;">
                 <img class="headerimage" src="/images/ibis/plus.png">Pro
-                <img class="respond" src="/images/respond_sm.png">
+                <a href="/conversation/newpro/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
             </div>
             <div class="column" style="text-align: center;">
                 <img class="headerimage" src="/images/ibis/minus.png">Con
-                <img class="respond" src="/images/respond_sm.png">
+                <a href="/conversation/newcon/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
             </div>
             <div class="column" style="text-align: center;">
                 <img class="headerimage" src="/images/ibis/note.png">Notes
-                <img class="respond" src="/images/respond_sm.png">
+                <a href="/conversation/newnote/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
             </div>
             <div class="column" style="text-align: center;">
                 <img class="headerimage" src="/images/ibis/reference.png">References
-                <img class="respond" src="/images/respond_sm.png">
+                <a href="/conversation/newreference/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
             </div>
             <div class="column" style="text-align: center;">
                 <img class="headerimage" src="/images/tag.png">Tags
-                <img class="respond" src="/images/respond_sm.png">
+                <a href="/tags/newtag/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
             </div>
     </div>
     <!-- column data -->
