--- a/views/partials/sidenav.hbs
+++ b/views/partials/sidenav.hbs
@@ -1,11 +1,12 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" title="Close" class="closebtn" onclick="closeNav()">&times;</a>
   <div style="margin-left: 10px;">
-  <a  href="/conversation/newconversation"><b>New Conversation</b></a>
-  <h2><img style="margin-right: 4px" src="/images/ibis/map.png">Conversations</h2>
-  <!-- paint the conversations -->
-  {{#each conlist}}
-    <a href="/conversation/fetchconversation/{{id}}">{{statement}}</a><br/>
-  {{/each}}
+    <!-- paint app links -->
+    <p>
+      <a href="/conversation/conversationindex"><h3><img style="margin-right: 4px" src="/images/ibis/map_sm.png">Conversations</h2></a>
+    </p>
+    <p>
+      <a href="/tags/tagindex"><h3><img style="margin-right: 4px" src="/images/tag_sm.png">Tags</h2></a>
+    </p>
   </div>
 </div>
