Bug fix, added images, refactored more to CommonModel

--- a/views/view.hbs
+++ b/views/view.hbs
@@ -55,7 +55,7 @@
             {{/each}}
         </div>
         <div class="datacolumn">
-            {{#each result.pros}}
+            {{#each result.proargs}}
                 <div class="node">
                     <a style="margin-left:4px;" href="/conversation/{{id}}">{{statement}}</a>
                 </div>
@@ -63,7 +63,7 @@
 
         </div>
         <div class="datacolumn">
-            {{#each result.cons}}
+            {{#each result.conargs}}
                 <div class="node">
                     <a style="margin-left:4px;" href="/conversation/{{id}}">{{statement}}</a>
                 </div>
