--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,15 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='/css/colcon.css' />
     <script type="text/javascript" src="/js/ckeditor/ckeditor.js"></script>
+    <style>
+      .flashMsg {
+        border: 8px solid #272525;
+        border-radius: 14px;
+        width: 960px;
+        font-size: 150%;
+        background: white;
+      }
+    </style>
  </head>
   <body>
     <div class="wrapper">
