--- a/views/tag_index.hbs
+++ b/views/tag_index.hbs
@@ -4,7 +4,7 @@
         <h2><img style="margin-right: 4px" src="/images/tag.png">Tags</h2>
 
         {{#each taglist}}
-            <a href="/tags/{{id}}">{{statement}}</a><br/>
+            <a href="/tags/gettag/{{id}}">{{statement}}</a><br/>
         {{/each}}
     </div>
 
