--- a/views/partials/homebar.hbs
+++ b/views/partials/homebar.hbs
@@ -6,6 +6,9 @@
 </div>
     <img style="margin-left: 4px; margin-right: 4px" src="/images/ibis/map.png">
     <a style="vertical-align: middle;" href="/"><b>Home</b></a>
+    {{#if curCon}}
+        <span style="margin-left:30px;"><a href="/conversation/{{curCon}}">Current Conversation</a></span>
+    {{/if}}
 </div>
 
 <script>
