Bug fix, added Tree View

--- a/views/partials/homebar.hbs
+++ b/views/partials/homebar.hbs
@@ -8,6 +8,8 @@
     <a style="vertical-align: middle;" href="/"><b>Home</b></a>
     {{#if curCon}}
         <span style="margin-left:30px;"><a href="/conversation/{{curCon}}">Current Conversation</a></span>
+        <span style="margin-left:10px;"><a href="/conversation/jstree/{{curCon}}">Tree View</a></span>
+    
     {{/if}}
 </div>
 
