--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='/css/colcon.css' />
     <script type="text/javascript" src="/js/ckeditor/ckeditor.js"></script>
+    <script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
     <style>
       .flashMsg {
         border: 8px solid #272525;
