--- a/views/partials/homebar.hbs
+++ b/views/partials/homebar.hbs
@@ -1,25 +1,20 @@
 <div id="homebar">
-<!--<div class="mcontainer" onclick="openNav()">
-  <div class="bar1"></div>
-  <div class="bar2"></div>
-  <div class="bar3"></div>
-</div>-->
     <img style="margin-left: 4px; margin-right: 4px" src="/images/ibis/map.png">
     <a style="vertical-align: middle;" href="/"><b>Home</b></a>
     <div class="dropdown">
         <button class="dropbtn">Applications</button>
         <div class="dropdown-content">
+            <a href="/bookmark/bookmarkindex">Bookmarks</a>
             <a href="/conversation/conversationindex">Conversations</a>
             <a href="/tags/tagindex">Tags</a>
         </div>
     </div>
 
-
     {{#if curCon}}
         <span style="margin-left:30px;"><a href="/conversation/{{curCon}}">Current Conversation</a></span>
         <span style="margin-left:10px;"><a href="/conversation/jstree/{{curCon}}">Tree View</a></span>
-    
     {{/if}}
+    
     <div style="margin-left:20px;" class="dropdown">
         <button  class="dropbtn">Account</button>
         <div class="dropdown-content">
