--- a/views/partials/label_details_form.hbs
+++ b/views/partials/label_details_form.hbs
@@ -3,6 +3,11 @@
     <form method="post" action="{{action}}">
         <input type="hidden" name="hidden_1" value="{{hidden_1}}">
         <input type="hidden" name="hidden_2" value="{{hidden_2}}">
+        {{#if url}}
+            <p style="margin-left: 20px">
+                <b>URL:</b> <input id="url" type="text" name="url" size="100" value="{{url}}" >
+            </p>
+        {{/if}}
         <p style="margin-left: 20px">
             <b>Label</b><br/>
             <input type="text" size="100" name="title" placeholder="{{labelplaceholder}}" value="{{formlabel}}">
