--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,15 @@
-<h1>{{title}}</h1>
 
-<img src="/images/earthrise2.png">
+<div style="margin-left:20px;">
+    <h1 style="font-family:Comic Sans MS;" >{{title}}</h1>
+    <img  src="/images/earthrise2.png">
+    <div style="overflow-y: auto; height:100px;">
+    <table >
+        {{#each recentlist}}
+            <tr>
+                <td style="width: 30px;"><img style="align:left;" src="{{img}}"></td>
+                <td><a href="/fetch/{{id}}?type={{type}}">{{statement}}</a></td>
+                <td style="float:right;">{{createdDate}}</td></tr>
+        {{/each}}
+    </table>
+    </div>
+</div>
