bug fixes and scrolled views

--- a/views/view.hbs
+++ b/views/view.hbs
@@ -7,9 +7,9 @@
                 <b>URL </b><a href="{{result.url}}">{{result.url}}</a>
             </p>
         {{/if}}
-        <p>
+        <div style="overflow-y: auto; height:300px;">
             {{{result.details}}}
-        </p>
+        </div>
     </div>
 </div>
 <!-- left-right scrollable container -->
