--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,13 +3,13 @@
     <h1 style="font-family:Comic Sans MS;" >{{title}}</h1>
     <img  src="/images/earthrise2.png">
     <div style="overflow-y: auto; height:300px;">
-    <table >
-        {{#each recentlist}}
-            <tr>
-                <td style="width: 30px;"><img style="align:left;" src="{{img}}"></td>
-                <td><a href="/fetch/{{id}}?type={{type}}">{{statement}}</a></td>
-                <td style="float:right;">{{createdDate}}</td></tr>
-        {{/each}}
-    </table>
+        <table >
+            {{#each recentlist}}
+                <tr>
+                    <td style="width: 30px;"><img style="align:left;" src="{{img}}"></td>
+                    <td><a href="/fetch/{{id}}/{{type}}">{{statement}}</a></td>
+                    <td style="float:right;">{{createdDate}}</td></tr>
+            {{/each}}
+        </table>
     </div>
 </div>
