--- a/views/partials/label_details_form.hbs
+++ b/views/partials/label_details_form.hbs
@@ -12,15 +12,16 @@
             <b>Label</b><br/>
             <input type="text" size="100" name="title" placeholder="{{labelplaceholder}}" value="{{formlabel}}">
         </p>
-        <p style="margin-left: 20px">
+        <div style="margin-left: 20px; ">
+
             <b>Details</b><br/>
-            <textarea name="details" id="editor1" placeholder="{{detailsplaceholder}}" rows="10" cols="100">
+            <textarea rows="10" cols="100" name="details" id="editor1" placeholder="{{detailsplaceholder}}" >
                 {{formdetails}}
             </textarea>
             <script>
               CKEDITOR.replace( 'editor1' );
             </script>
-        </p>
+        </div>
         <p style="margin-left: 20px">
             <button type="submit" class="btn btn-success">Save</button>
             <button style="margin-left: 20px" type="submit" class="btn btn-success" onclick("location.href='/';">Cancel</button>
