--- a/views/tag_view.hbs
+++ b/views/tag_view.hbs
@@ -2,7 +2,7 @@
     <div style="margin-left: 20px">
         <h2><img style="margin-right:4px;" src="/images/tag.png">{{result.statement}}</h2>
         {{#each result.tags}}
-            <a href="/conversation/{{id}}">{{statement}}</a><br/>
+            <a href="/fetch/{{id}}/{{type}}">{{statement}}</a><br/>
         {{/each}}
     </div>
 </div>
