--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,7 @@
 <div style="margin-left:20px;">
     <h1 style="font-family:Comic Sans MS;" >{{title}}</h1>
     <img  src="/images/earthrise2.png">
+    <h3>Recent Additions</h3>
     <div style="overflow-y: auto; height:300px;">
         <table >
             {{#each recentlist}}
