--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,7 @@
 <div style="margin-left:20px;">
     <h1 style="font-family:Comic Sans MS;" >{{title}}</h1>
     <img  src="/images/earthrise2.png">
+    <h3 style="margin-left:20px;"><i>We don't stop playing because we grow old, we grow old because we stop playing.</i> -George Bernard Shaw</h3>
     <h3>Recent Additions</h3>
     <div style="overflow-y: auto; height:300px;">
         <table >
