Added connections, bug fixes

--- a/views/partials/homebar.hbs
+++ b/views/partials/homebar.hbs
@@ -5,6 +5,7 @@
         <button class="dropbtn">Applications</button>
         <div class="dropdown-content">
             <a href="/bookmark/bookmarkindex">Bookmarks</a>
+            <a href="/connections/connectionindex">Connections</a>
             <a href="/conversation/conversationindex">Conversations</a>
             <a href="/tags/tagindex">Tags</a>
         </div>
