--- a/views/view.hbs
+++ b/views/view.hbs
@@ -12,6 +12,22 @@
         </div>
     </div>
 </div>
+{{#if isRelation}}
+    <span style="margen-left:20px;">
+    <b>Source Node</b>  <a href="/fetch/{{result.sourceNode.id}}/{{result.sourceNode.type}}"><img style="margin-right:4px;" src="{{result.sourceNode.img}}">{{result.sourceNode.statement}}</a>
+    <br/>
+    <b>Target Node</b>  <a href="/fetch/{{result.targetNode.id}}/{{result.targetNode.type}}"><img style="margin-right:4px;" src="{{result.targetNode.img}}">{{result.targetNode.statement}}</a>    
+    </span>
+    <br/>
+{{/if}}
+{{#if isAuthenticated}}
+    <span style="margen-left:20px;"><b>Remember this node</b>  <a title="Remember" href="/connections/remember/{{result.id}}"><img  src="/images/remember.png"></a>
+    {{#if isRemembered}}
+        <b>Connect this node as Source</b><a title="Connect As Source" href="/connections/newassource/{{result.id}}/{{result.type}}"><img  src="/images/connectsrc.png"></a>
+        <b>Connect this node as Target</b><a title="Connect As Target" href="/connections/newastarget/{{result.id}}/{{result.type}}"><img  src="/images/connect.png"></a>
+    {{/if}}
+    </span>
+{{/if}}
 <!-- left-right scrollable container -->
 <div class="columnscroller">
     <!-- column headers -->
@@ -19,7 +35,7 @@
             <div class="column" style="text-align: center;">
                 <img class="headerimage" src="/images/ibis/issue.png">Question
                 {{#if isAuthenticated}}
-                    <a href="/conversation/newquestion/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
+                    <a title="Respond" href="/conversation/newquestion/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
                 {{/if}}
             </div>
             <div class="column" style="text-align: center;">
@@ -49,8 +65,11 @@
             <div class="column" style="text-align: center;">
                 <img class="headerimage" src="/images/ibis/reference.png">References
                 {{#if isAuthenticated}}
-                   <a href="/conversation/newreference/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
+                    <a href="/conversation/newreference/{{result.id}}"><img class="respond" src="/images/respond_sm.png"></a>
                 {{/if}}
+            </div>
+            <div class="column" style="text-align: center;">
+                <img class="headerimage" src="/images/cogwheels.png">Connections
             </div>
             <div class="column" style="text-align: center;">
                 <img class="headerimage" src="/images/tag.png">Tags
@@ -101,6 +120,13 @@
             {{#each result.references}}
                 <div class="node">
                     <a style="margin-left:4px;" href="/conversation/{{id}}">{{statement}}</a>
+                </div>
+            {{/each}}
+        </div>
+        <div class="datacolumn">
+            {{#each result.relations}}
+                <div class="node">
+                    <a style="margin-left:4px;" href="/connections/{{id}}">{{statement}}</a>
                 </div>
             {{/each}}
         </div>
