--- a/views/partials/homebar.hbs
+++ b/views/partials/homebar.hbs
@@ -7,7 +7,9 @@
             <a href="/bookmark/bookmarkindex">Bookmarks</a>
             <a href="/connections/connectionindex">Connections</a>
             <a href="/conversation/conversationindex">Conversations</a>
+            <a href="/dbpedia/dbpedia">DbPedia</a>
             <a href="/tags/tagindex">Tags</a>
+            <a href="/carrotsearch/carrotsearch">Web Search</a>
         </div>
     </div>
 
