--- a/views/partials/homebar.hbs
+++ b/views/partials/homebar.hbs
@@ -8,6 +8,7 @@
             <a href="/connections/connectionindex">Connections</a>
             <a href="/conversation/conversationindex">Conversations</a>
             <a href="/dbpedia/dbpedia">DbPedia</a>
+            <a href="/geomap/geomap">GeoMap</a>
             <a href="/tags/tagindex">Tags</a>
             <a href="/carrotsearch/carrotsearch">Web Search</a>
         </div>
