Added journal app

--- a/views/connection_form.hbs
+++ b/views/connection_form.hbs
@@ -55,7 +55,7 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-success">Save</button>
-                <button style="margin-left: 20px" type="submit" class="btn btn-success" onclick("location.href='/';">Cancel</button>
+                &nbsp;<a href="/" title="cancel" class="btn">Cancel</a>
             </div>
         </div>
     </form>
