--- a/views/partials/homebar.hbs
+++ b/views/partials/homebar.hbs
@@ -9,6 +9,7 @@
             <a href="/conversation/conversationindex">Conversations</a>
             <a href="/dbpedia/dbpedia">DbPedia</a>
             <a href="/geomap/geomap">GeoMap</a>
+            <a href="/journal/journalindex">Journal</a>
             <a href="/tags/tagindex">Tags</a>
             <a href="/carrotsearch/carrotsearch">Web Search</a>
         </div>
