--- a/views/newconversation_form.hbs
+++ b/views/newconversation_form.hbs
@@ -59,8 +59,8 @@
             </script>
         </p>
         <p style="margin-left: 20px">
-            <button type="submit" class="btn btn-success">Save</button>
-            <button style="margin-left: 20px" type="submit" class="btn btn-success" onclick("location.href='/';">Cancel</button>
+            <button type="submit" class="btn btn-success"
+            <input style="margin-left: 20px" type="button" onclick="window.location.href='/';" value="Cancel" />
         </p>
     </form>
 </div>
