--- a/views/newtag_form.hbs
+++ b/views/newtag_form.hbs
@@ -31,7 +31,7 @@
                 </p>
                 <p>
                     <button type="submit" class="btn btn-success">Save</button>
-                    <button style="margin-left: 20px" type="submit" class="btn btn-success" onclick("location.href='/';">Cancel</button>
+                    &nbsp;<a href="/" title="cancel" class="btn">Cancel</a>
                 </p>
             </form>
         </div>
