--- a/views/partials/label_details_form.hbs
+++ b/views/partials/label_details_form.hbs
@@ -24,7 +24,7 @@
         </div>
         <p style="margin-left: 20px">
             <button type="submit" class="btn btn-success">Save</button>
-            <button style="margin-left: 20px" type="submit" class="btn btn-success" onclick("location.href='/';">Cancel</button>
+            &nbsp;<a href="/" title="cancel" class="btn">Cancel</a>
         </p>
     </form>
 </div>
