--- a/views/tag_view.hbs
+++ b/views/tag_view.hbs
@@ -1,4 +1,5 @@
 <div id="topbox">
+    <span style="float:right; font-size:small;">{{result.creatorId}} {{result.createdDate}}</span>    
     <div style="margin-left: 20px">
         <h2><img style="margin-right:4px;" src="/images/tag.png">{{result.statement}}</h2>
         {{#each result.tags}}
