--- a/views/view.hbs
+++ b/views/view.hbs
@@ -1,5 +1,6 @@
 <!-- active node -->
 <div id="topbox">
+    <span style="float:right; font-size:small;">{{result.creatorId}} {{result.createdDate}}</span>
     <div style="margin-left: 4px;">
         <h2><img style="margin-right:4px;" src="{{result.img}}">{{result.statement}}</h2>
         {{#if result.url}}
