--- a/public/css/colcon.css
+++ b/public/css/colcon.css
@@ -88,6 +88,7 @@
 }
 .column {
     float:left;
+    white-space:normal;
     border: 1px solid black;
     width: 300px;
     height: 34px;
@@ -135,7 +136,6 @@
 
 .respond {
     float: right;
-    vertical-align: bottom;
     margin-right: 4px;
 }
 
