bugfix on newconversatio_form.hbs

--- a/views/newconversation_form.hbs
+++ b/views/newconversation_form.hbs
@@ -60,7 +60,7 @@
         </p>
         <p style="margin-left: 20px">
             <button type="submit" class="btn btn-success"
-            <input style="margin-left: 20px" type="button" onclick="window.location.href='/';" value="Cancel" />
+            &nbsp;<a href="/" title="cancel" class="btn">Cancel</a>
         </p>
     </form>
 </div>
