--- a/public/css/colcon.css
+++ b/public/css/colcon.css
@@ -56,6 +56,40 @@
     overflow-y: hidden;
     height:500px;   
 }
+
+.relationcroller {
+    border: 1px solid black;
+    width: 960;
+    white-space:nowrap;
+    overflow-x: scroll; 
+    overflow-y: hidden;
+    margin: 12px;
+    border-radius: 3px;
+}
+.relationcolumn {
+    float:left;
+    white-space:normal;
+    border: 1px solid black;
+    width: 100px;
+    height: 34px;
+    background: rgb(240, 234, 234);
+    border-radius: 3px;
+    margin-left: 4px;
+    margin-right: 4px;
+    font-family:pragmatica-web,sans-serif;    
+}
+.relationdatacolumn {
+    height: 400px; 
+    float:left;
+    border: 1px solid white;
+    width: 100px;
+    background: white;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    break-inside: avoid;
+    margin-left: 4px;
+    margin-right: 4px;
+}
 /**
  * Enable columns to scroll right and left
  */
