--- a/views/newconversation_form.hbs
+++ b/views/newconversation_form.hbs
@@ -59,7 +59,7 @@
             </script>
         </p>
         <p style="margin-left: 20px">
-            <button type="submit" class="btn btn-success"
+            <button type="submit" class="btn btn-success">Save</button>
             &nbsp;<a href="/" title="cancel" class="btn">Cancel</a>
         </p>
     </form>
