Revised Connections form

--- a/views/login_form.hbs
+++ b/views/login_form.hbs
@@ -13,7 +13,7 @@
         </p>
         <p>
             <button type="submit" class="btn btn-success">Login</button>
-            <button style="margin-left: 20px" type="submit" class="btn btn-success" onclick("location.href='/';">Cancel</button>
+                &nbsp;<a href="/" title="cancel" class="btn">Cancel</a>
         </p>
         </form>
     </div>
