--- a/views/partials/label_details_form.hbs
+++ b/views/partials/label_details_form.hbs
@@ -1,6 +1,15 @@
+<script>
+    function validateForm() {
+        var x = document.forms["rootform"]["title"].value;
+        if (x === "") {
+            alert("Label must be filled out");
+            return false;
+        }
+    };
+</script>
 <div id="topbox">
     <h2 style="margin-left: 20px">{{formtitle}}</h2>
-    <form method="post" action="{{action}}">
+    <form name="rootform" method="post" action="{{action}}" onsubmit="return validateForm()">
         <input type="hidden" name="hidden_1" value="{{hidden_1}}">
         <input type="hidden" name="hidden_2" value="{{hidden_2}}">
         {{#if url}}
