--- a/public/css/colcon.css
+++ b/public/css/colcon.css
@@ -183,6 +183,7 @@
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    overflow:auto;
 }
 
 /* Links inside the dropdown */
