--- a/views/bookmark_index.hbs
+++ b/views/bookmark_index.hbs
@@ -1,7 +1,7 @@
 <div id="topbox">
     <div style="margin-left: 10px;">
-
-        <h2><img style="margin-right: 4px" src="/images/bookmark.png">Bookmarks</h2>
+        <h2><img style="margin-right: 4px" src="/images/bookmark.png">Bookmarks<img style="margin-left=20px;" src="/images/help.png" onclick="javascript:location.href='/aboutbookmarks'">
+</h2>
         <div style="overflow-y: auto; height:300px;">
 
             {{#each bookmarklist}}
