--- a/views/connection_index.hbs
+++ b/views/connection_index.hbs
@@ -1,7 +1,7 @@
 <div id="topbox">
     <div style="margin-left: 10px;">
 
-        <h2><img style="margin-right: 4px" src="/images/cogwheels.png">Tags</h2>
+        <h2><img style="margin-right: 4px" src="/images/cogwheels.png">Connections<img style="margin-left=20px;" src="/images/help.png" onclick="javascript:location.href='/aboutconnections'"></h2>
         <div style="overflow-y: auto; height:300px;">
 
             {{#each connectionlist}}
