--- a/views/geomap.hbs
+++ b/views/geomap.hbs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/css/leaflet.css">
 <script src="/js/leaflet.js"></script>
+<img style="margin-left=20px;" src="/images/help.png" onclick="javascript:location.href='/aboutgeomap'">
 
 <div class="wrapper">
     <div id="mapparams" x="{{x}}" y="{{y}}" z="{{z}}"></div>
