--- a/views/journal_index.hbs
+++ b/views/journal_index.hbs
@@ -1,7 +1,7 @@
 <div id="topbox">
     <div style="margin-left: 10px;">
 
-        <h2><img style="margin-right: 4px" src="/images/publication.png">Journal Entries</h2>
+        <h2><img style="margin-right: 4px" src="/images/publication.png">Journal Entries<img style="margin-left=20px;" src="/images/help.png" onclick="javascript:location.href='/aboutjournals'"></h2>
         {{#if isAuthenticated}}
             <p><a  href="/journal/new"><b>New Journal Entry</b></a></p>
         {{/if}}
