node editing WIP

--- a/views/partials/label_details_form.hbs
+++ b/views/partials/label_details_form.hbs
@@ -25,7 +25,7 @@
 
             <b>Details</b><br/>
             <textarea rows="10" cols="100" name="details" id="editor1" placeholder="{{detailsplaceholder}}" >
-                {{formdetails}}
+                {{{formdetails}}}
             </textarea>
             <script>
               CKEDITOR.replace( 'editor1' );
